src/controller/middleware/snapshots/loco_rs__controller__middleware__secure_headers__tests__can_override_headers.snap
---
source: src/controller/middleware/secure_headers.rs
expression: normalize_headers(response.headers())
snapshot_kind: text
---
{
    "content-length": "0",
    "content-security-policy": "default-src 'self' https:; font-src 'self' https: data:; img-src 'self' https: data:; object-src 'none'; script-src https:; style-src 'self' https: 'unsafe-inline'",
    "new-header": "baz",
    "strict-transport-security": "max-age=631138519",
    "x-content-type-options": "nosniff",
    "x-download-options": "foobar",
    "x-frame-options": "sameorigin",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
}
