src/controller/middleware/snapshots/loco_rs__controller__middleware__secure_headers__tests__default_is_github_preset.snap
---
source: src/controller/middleware/secure_headers.rs
expression: response.headers()
---
{
    "content-security-policy": "default-src 'self' https:; font-src 'self' https: data:; img-src 'self' https: data:; object-src 'none'; script-src https:; style-src 'self' https: 'unsafe-inline'",
    "strict-transport-security": "max-age=631138519",
    "x-content-type-options": "nosniff",
    "x-download-options": "noopen",
    "x-frame-options": "sameorigin",
    "x-permitted-cross-domain-policies": "none",
    "x-xss-protection": "0",
    "content-length": "0",
}
